# ood_map_reduce

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Executive.cpp  Executive.h  FileManager.cpp  FileManager.h  Main.cpp  Map.cpp  Map.hpp  README.md  Sort.h  compile_main.bat  compile_main.sh  input.txt  main.cpp  out.txt  run.bat  run.sh  sort.cpp  sort.h
.github/: pull_request_template.md
dll/: Map.cpp  ReduceDll.cpp
dll/mac/: libMap.dylib  libReduce.dylib
docs/: UML Project Final.docx  UML Project.docx  ~$L Project.docx
src/: Executive.cpp  FileManager.cpp  Map.cpp  Reduce.cpp  Reduce.h  Socket.cpp  Sort.cpp  Stub.cpp  Workflow.cpp  main.cpp  testmain.cpp
src/headers/: Executive.h  FileManager.h  Map.hpp  Reduce.h  Socket.h  Sort.h  Stub.h  Workflow.h
test_data/input_data/other_data/: input1.txt  input2.txt
test_data/output_data/: .gitignore
test_data/temp_data/: output.txt  tempMapOutput.txt  tempSortOutput.txt
tests/: ExecutiveTest.cpp  FileManagerTest.cpp  MapTest.cpp  ReduceTest.cpp  SortTest.cpp  TestReduce.cpp  map_test.cpp  unit_test.cpp
